completed literature review

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -111,6 +111,17 @@
   timestamp = {2015.04.10}
 }
 
+@INPROCEEDINGS{agichtein2008finding,
+  author = {Agichtein, Eugene and Castillo, Carlos and Donato, Debora and Gionis,
+	Aristides and Mishne, Gilad},
+  title = {Finding high-quality content in social media},
+  booktitle = {Proceedings of the 2008 International Conference on Web Search and
+	Data Mining},
+  year = {2008},
+  pages = {183--194},
+  organization = {ACM}
+}
+
 @INPROCEEDINGS{ahn2006stages,
   author = {Ahn, David},
   title = {The stages of event extraction},
@@ -592,6 +603,14 @@
   pages = {457--479},
   owner = {cisstudent},
   timestamp = {2015.04.09}
+}
+
+@ARTICLE{erkan2004lexrank,
+  author = {Erkan, G{\"u}nes and Radev, Dragomir R},
+  title = {LexRank: graph-based lexical centrality as salience in text summarization},
+  journal = {Journal of Artificial Intelligence Research},
+  year = {2004},
+  pages = {457--479}
 }
 
 @ARTICLE{fellegi1969theory,
