updated the revised dissertation overview

--- a/main.tex
+++ b/main.tex
@@ -72,7 +72,7 @@
 \begin{center}
 
 \textsc{\LARGE University of Arkansas at Little Rock}\\[1.5cm] % University name
-\textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
+\textsc{\Large Doctoral Dissertation}\\[0.5cm] % Thesis type
 
 \HRule \\[0.4cm] % Horizontal line
 {\huge \bfseries A Framework for Collecting, Extracting and Managing Event Identity Information from Textual Content in Social Media}\\[0.4cm] % Thesis title
@@ -91,7 +91,7 @@
 \end{flushright}
 \end{minipage}\\[3cm]
  
-\large \textit{A thesis submitted in fulfilment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
+\large \textit{A dissertation submitted in fulfilment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
 \textit{in}\\[0.4cm]
 Integrated Computing \\ Information Quality Track \\ Department of Information Science \\[2cm] % Research group name and department name
  
