updated second chapter social media section

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -748,6 +748,18 @@
 }
 
 @ARTICLE{hamdy2012framing,
+  author = {Hamdy, Naila and Gomaa, Ehab H},
+  title = {Framing the Egyptian uprising in Arabic language newspapers and social
+	media},
+  journal = {Journal of Communication},
+  year = {2012},
+  volume = {62},
+  pages = {195--211},
+  number = {2},
+  publisher = {Wiley Online Library}
+}
+
+@ARTICLE{hamdy2012framing,
   author = {Hamdy, N. and others},
   title = {Framing the Egyptian uprising in Arabic language newspapers and social
 	media},
@@ -924,6 +936,18 @@
   owner = {cisstudent},
   publisher = {SAGE Publications},
   timestamp = {2015.04.10}
+}
+
+@ARTICLE{kaplan2010users,
+  author = {Kaplan, Andreas M and Haenlein, Michael},
+  title = {Users of the world, unite! The challenges and opportunities of Social
+	Media},
+  journal = {Business horizons},
+  year = {2010},
+  volume = {53},
+  pages = {59--68},
+  number = {1},
+  publisher = {Elsevier}
 }
 
 @INPROCEEDINGS{kennedy2009less,
