--- a/main.tex
+++ b/main.tex
@@ -332,12 +332,13 @@ Lastly, I thank University of Arkansas for providing me with the facilities, fun
 % Uncomment the lines as you write the chapters
 %\input{Chapters/Overview}
 \input{Chapters/Chapter1}
-\input{Chapters/Chapter2}
-\input{Chapters/Chapter3} 
-
-\input{Chapters/Chapter4} 
-\input{Chapters/Chapter5} 
-\input{Chapters/Chapter6} 
+\input{Chapters/SocialMediaAndRealLifeEvents}
+\input{Chapters/LiteratureReview}
+\input{Chapters/Challenges} 
+\input{Chapters/EiimLifeCycle} 
+\input{Chapters/Evaluations}
+\input{Chapters/PotentialApplications} 
+\input{Chapters/ConclusionAndFutureWork} 
 %\input{Chapters/Chapter7} 
 
 %----------------------------------------------------------------------------------------
