--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@
 \usepackage{algorithm2e}
 \usepackage{amssymb}
 \usepackage{titlesec}
+\usepackage{amsthm}
 \hypersetup{urlcolor=blue, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
 \title{\ttitle} % Defines the thesis title - don't touch this
 
