Updated the formating according to UALR Grad School requirements

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -436,6 +436,11 @@
   volume = {201}
 }
 
+@MISC{breslinsemantically,
+  author = {Breslin, JG and Bojars, U},
+  title = {Semantically-Interlinked Online Communities}
+}
+
 @ARTICLE{brin1998anatomy,
   author = {Brin, S. and others},
   title = {The anatomy of a large-scale hypertextual Web search engine},
@@ -574,6 +579,15 @@
   organization = {ACM},
   owner = {cisstudent},
   timestamp = {2015.04.09}
+}
+
+@ARTICLE{doerr2006towards,
+  author = {Doerr, Martin and Hunter, Jane and Lagoze, Carl},
+  title = {Towards a core ontology for information integration},
+  journal = {Journal of Digital information},
+  year = {2006},
+  volume = {4},
+  number = {1}
 }
 
 @INPROCEEDINGS{Duan2010,
@@ -1682,6 +1696,13 @@
   year = {2010},
   pages = {365--370},
   organization = {IEEE}
+}
+
+@ARTICLE{smith2002basic,
+  author = {Smith, Barry and Grenon, P},
+  title = {Basic formal ontology},
+  journal = {Draft. Downloadable at http://ontology. buffalo. edu/bfo},
+  year = {2002}
 }
 
 @ARTICLE{talburt2007algebraic,
